--- a/src/assets/styles/notifi.scss
+++ b/src/assets/styles/notifi.scss
@@ -28,7 +28,8 @@
   border: 1px solid #00296b !important;
 } 
 
-.notifi-connect {
+.notifi-connect,
+.notifi-error-global {
   height: 373px !important; 
 }
 
