--- a/src/assets/styles/notifi.scss
+++ b/src/assets/styles/notifi.scss
@@ -1,266 +1,211 @@
-// Override styles from @notifi-network/notifi-react-card/dist/index.css (main.ts)
+// Override styles from @notifi-network/notifi-react/dist/index.css (main.ts)
 :root {
-  --notifi-color-brand: #5959f4;
-  --notifi-color-brand-secondary: #a9e2fc;
-  --notifi-color-card: #2b2b3b;
-  --notifi-color-gray-secondary: #3b394a;
-  --notifi-color-heather: #b6b8d5;
-  --notifi-color-gray-tooltip: #4c4c61;
-  --notifi-color-light-green: #b4e2ac;
-  --notifi-lineart-gradient-dark: linear-gradient(
+  --notifi-color-primary: #7F91F6;
+  --notifi-color-error: #D5828B;
+  --notifi-color-verified: #A4DE95;
+  --notifi-color-input: #0C1021;
+  --notifi-color-card: #14192E;
+  --notifi-color-stroke: #0D2867;
+  --notifi-color-light-text: #A3A4AF;
+  --notifi-color-button: linear-gradient(
     90.09deg,
-    #5959f4 -0.96%,
-    #85bbf2 99.92%
-  );
-  --notifi-lineart-gradient-light: linear-gradient(
-    90deg,
-    #5959f4 0%,
-    #85bbf2 100%
+    #364A93 -0.96%,
+    #6E5DC9 99.92%
   );
 }
-.NotifiSubscriptionCard__container {
+
+.notifi-target-state-banner-verify-cta {
+  color: var(--notifi-color-light-text) !important;
+}
+
+.notifi-card-modal {
   font-family: Prompt, Helvetica, Arial, sans-serif !important;
   width: 370px;
-  height: 620px;
-  border-radius: 22px !important;
+  height: unset !important;
+  border-radius: 22px !important; 
   background-color: var(--notifi-color-card) !important;
-  border: solid 1px rgba(255, 255, 255, 0.1) !important;
   overflow: hidden !important;
+  border: 1px solid #00296b !important;
+} 
+
+.notifi-connect,
+.notifi-error-global {
+  height: 373px !important; 
 }
 
-.NotifiInputSeparator__content {
-  color: rgba(255, 255, 255, 0.2);
+.notifi-connect-button, 
+.notifi-ftu-target-list-button,
+.notifi-ftu-alert-edit-button {
+  background: var(--notifi-color-button) !important; 
+  color: white !important; 
+  border-radius: 16px !important; 
+}
+.notifi-target-list-item { 
+  border: #20283D 1px solid;
 }
 
-.NotifiInputSeparator__container:before,
-.NotifiInputSeparator__container:after,
-.NotifiPreviewCardSeparator:before,
-.NotifiPreviewCardSeparator::after {
-  background-color: rgba(255, 255, 255, 0.2) !important;
+.notifi-target-list-item-target {
+  border: 2px solid transparent;
 }
 
-.configAlertModal__container,
-.configDestinationModal__container {
-  width: 100% !important;
-  height: 100% !important;
+.notifi-target-list-item-content {
+  background-color: var(--notifi-color-input) !important;
 }
 
-.configAlertModal__overlay,
-.configDestinationModal__overlay {
-  display: none;
+.notifi-target-list-item-warning {
+  background-color: #20283D !important;
 }
 
-.verifyBanner__container {
-  background-color: var(--notifi-color-gray-secondary) !important;
-}
-.verifyBanner__button,
-.SignupBanner__Button {
-  background-color: var(--notifi-color-brand) !important;
-  color: white;
-  font-weight: 700 !important;
-  padding: 7px 13px;
+.notifi-target-cta-button {
+  border: 2px solid var(--notifi-color-primary) !important;
+  background-color: rgba(0, 0, 0, 0) !important;
+  padding: 0 0 !important;
+  border-radius: 12px;
 }
 
-.NotifiPreviewCard__editButton {
-  color: var(--notifi-color-brand-secondary) !important;
-  font-size: 14px !important;
+.notifi-target-cta-button.disabled {
+  height: 28.8px !important;
 }
 
-.NotifiToggle__slider {
-  background: #4f4f56 !important;
+.notifi-target-state-banner {
+  background-color: var(--notifi-color-input) !important;
 }
 
-.NotifiToggle__input:checked + .NotifiToggle__slider {
-  background: var(--notifi-color-brand-secondary) !important;
-}
-
-.NotifiPreviewCard__editButton svg {
-  display: none;
-}
-
-.NotifiAlertHistory__notificationImage {
-  margin-right: 10px;
-  margin-left: 5px;
-}
-
-.NotifiEventTypeContainer {
-  overflow: visible !important;
-}
-
-.NotifiPreviewCard__title {
-  font-size: 14px !important;
-}
-
-.EventTypeBroadcastRow__label,
-.EventTypeHealthCheckRow__label,
-.EventTypeFusionToggleRow__label {
-  display: block !important;
-  position: relative;
-  font-size: 14px !important;
-}
-
-.NotifiTooltip__container {
-  display: inline;
-  position: absolute;
-  top: 5px;
-  left: 0;
-}
-
-.NotifiCardButton__button,
-.NotifiSubscribeButton__button {
-  border-radius: 6px !important;
-  background: var(--notifi-lineart-gradient-dark);
-}
-
-.NotifiCardButton__button:disabled,
-.NotifiSubscribeButton__button:disabled,
-.NotifiStartChatButton__button:disabled,
-.NotifiIntercomSendMessageSection__button:disabled {
-  cursor: not-allowed;
-  background: var(--notifi-lineart-gradient-light);
-  opacity: 0.5;
-}
-
-.configAlertModal__container,
-.configDestinationModal__container {
-  background-color: var(--notifi-color-card) !important;
-  border-radius: 22px !important;
-}
-.configAlertModal__headerContainer,
-.configAlertModal__footerContainer,
-.configDestinationModal__headerContainer,
-.configDestinationModal__footerContainer {
-  background-color: inherit !important;
-  height: 100px !important;
-}
-
-.configAlertModal__backIcon {
-  top: 25px !important;
-  left: 16px !important;
-}
-
-.configAlertModal__EventTypeHealthCheckRow__ButtonContainer,
-.configAlertModal__EventTypeFusionHealthCheckRow__ButtonContainer,
-.configAlertModal__EventTypeCustomHealthCheckRow__ButtonContainer {
-  padding-bottom: 20px !important;
-}
-
-.configAlertModal__EventTypeContainer {
-  padding: 0px 14px !important;
-  .NotifiTooltip__infoIcon {
-    fill: var(--notifi-color-heather) !important;
-  }
-  .NotifiEmailInput__errorMessage,
-  .NotifiSmsInput__errorMessage,
-  .NotifiTelegramInput__errorMessage {
-    display: block !important;
-    padding-left: 12px !important;
-    margin-top: -33px;
-    text-align: start !important;
-  }
-}
-
-.configDestinationModal__emailResendLink {
-  color: var(--notifi-color-brand-secondary) !important;
-}
-
-.configAlertModal__footerContainer button,
-.configDestinationModal__footerContainer button {
-  background: var(--notifi-lineart-gradient-dark);
-  color: white;
-}
-.NotifiUserInfoPanel__myWalletLabel,
-.NotifiUserInfoPanel__emailLabel,
-.NotifiUserInfoPanel__smsLabel,
-.NotifiUserInfoPanel__smsLabel,
-.NotifiUserInfoPanel__telegramLabel,
-.otifiUserInfoPanel__discordLabel {
-  font-size: 14px !important;
-}
-
-.DividerLine.signup {
-  display: none;
-}
-
-.NotifiAlertListContainer__listItemContent {
-  font-weight: 500 !important;
-}
-
-.NotifiAlertList__listItem svg {
-  transform: scale(2);
-}
-
-.NotifiAlertListContainer__checkmarkIcon path {
-  stroke: var(--notifi-color-brand-secondary) !important;
-  stroke-width: 1.5px !important;
-}
-
-.NotifiEmailInput__container,
-.NotifiSmsInput__container,
-.NotifiTelegramInput__container {
-  background-color: var(--notifi-color-gray-secondary) !important;
+.notifi-target-state-banner-verify.history {
+  background-color: var(--notifi-color-input) !important;
   border: none !important;
 }
-.NotifiEmailInput__input::placeholder,
-.NotifiSmsInput__input::placeholder,
-.NotifiTelegramInput__input::placeholder {
-  color: rgba(255, 255, 255, 0.5);
+
+.notifi-target-state-banner-verify {
+  border: 1px #20283D solid;
+  border-radius: 8px;
 }
 
-.configDestinationModal__verifiedButton {
-  background: var(--notifi-color-light-green) !important;
-  color: var(--notifi-color-card) !important;
+.notifi-target-state-banner-verify-cta.history {
+  border: 2px solid var(--notifi-color-primary) !important;
+  background: rgba(0, 0, 0, 0) !important;
+  padding: 0.8px 0.8px !important;
+  border-radius: 12px;
 }
 
-.NotifiUserInfoPanelContainer {
-  background-color: var(--notifi-color-gray-secondary) !important;
+.notifi-target-list-item-input-form {
+  background-color: var(--notifi-color-input) !important;
+  margin-top: -3px;
+  padding-top: 3px;
+  border-radius: 0 0 8px 8px;
 }
 
-.NotifiTooltip__infoIcon {
+.notifi-target-input-field-input-container {
+  background-color: var(--notifi-color-card);
+}
+
+.notifi-target-list-item-remove {
+  top: 8px !important;
+}
+
+.notifi-connect-button .notifi-spinner-container {
+  width: 24px !important;  
+  height: 24px !important; 
+}
+
+.notifi-topic-row {
+  background-color: var(--notifi-color-input) !important;
+  border: 1px solid #20283D !important;
+}
+
+.notifi-topic-row-content {
+  align-items: baseline;
+}
+
+.notifi-topic-options-item.button,
+.notifi-topic-option-custom-input-container {
+  background-color: var(--notifi-color-card) !important;
+}
+
+.notifi-tooltip-content {
+  background-color: var(--notifi-color-card) !important;
+  border: 1px solid var(--notifi-color-stroke) !important;
+}
+
+.notifi-spinner-container {
   width: 16px !important;
   height: 16px !important;
 }
 
-.NotifiTooltip__body::before {
-  display: none !important;
+.notifi-spinner {
+  top: 16px !important;
 }
 
-.EventTypeHealthCheckRow__buttonContainer {
-  display: flex;
-  gap: 10px;
+
+.powered-by-notifi {
+  align-items: center;
 }
 
-.EventTypeHealthCheckRow__button {
-  background-color: black !important;
-  color: var(--notifi-color-heather) !important;
+.notifi-inbox,
+.notifi-ftu {
+  height: 620px !important;
+}
+
+.notifi-inbox-history-detail-header, .notifi-inbox-history-list-header, .notifi-inbox-config-topic-header, .notifi-inbox-config-target-header {
+  background-color: var(--notifi-color-input) !important;
   border: none !important;
-  flex-grow: 1;
-  margin-right: 0 !important;
-  &::placeholder {
-    color: var(--notifi-color-heather) !important;
-  }
-
-  &.EventTypeHealthCheckRow__buttonSelected {
-    color: var(--notifi-color-brand-secondary) !important;
-    border: 2px solid var(--notifi-color-brand-secondary) !important;
-  }
-  &:focus {
-    outline: none !important;
-    border: none !important;
-  }
 }
 
-.NotifiEmailInput__errorMessage,
-.NotifiSmsInput__errorMessage,
-.NotifiTelegramInput__errorMessage {
-  color: var(--notifi-checkmark-color) !important;
+.notifi-inbox-nav-tabs {
+  background-color: var(--notifi-color-input) !important;
+  border-top: #00296b 1px solid !important; 
+}
+
+.notifi-history-list-empty-description {
+  color: var(--notifi-color-light-text) !important;
+}
+.notifi-history-row {
+  background-color: var(--notifi-color-input);
+}
+.notifi-history-row-unread-indicator {
+  background-color: var(--notifi-color-primary) !important;
+}
+
+.notifi-history-row-title-text {
+  font-weight: 500;
+  font-size: 15px;
+}
+
+.notifi-history-row-timestamp {
+  font-size: 12px;
+  font-weight: 300;
+  color: var(--notifi-color-light-text);
+}
+.notifi-history-row-subject {
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--notifi-color-light-text);
+}
+
+.notifi-history-detail {
+  background-color: transparent !important;
+}
+
+.notifi-history-detail-timestamp {
+  color: var(--notifi-color-light-text) !important;
+}
+
+.notifi-toggle-slider {
+  background-color: #323E60 !important;
+}
+
+.notifi-toggle-input:checked + .notifi-toggle-slider {
+  background-color: var(--notifi-color-primary) !important;
 }
 
 @media screen and (max-width: 1024px) {
-  .NotifiSubscriptionCard__container {
-    width: 365px;
+  .notifi-card-modal {
     top: 40px;
     max-height: 580px;
-    max-width: 350px;
+    max-width: 360px;
+  }
+  .notifi-inbox,
+  .notifi-ftu {
+    height: 580px !important;
   }
 }
